Feature login (#4)
* login created.. missing access-token generation

* add login feature and token validation
